add domains restful interface
